--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,17 @@
 {
-    "name": "shnellpavel/yandex-mone-payout",
-    "description": "Module for integration with YandexMoney Payouts. See https://tech.yandex.ru/money/doc/payment-solution/payout/",
+    "name": "yandexmoneypayout/yandexmoneypayout",
+    "description": "",
     "minimum-stability": "stable",
     "license": "MIT",
     "authors": [
         {
-            "name": "Shnell Pavel",
-            "email": "shnellpavel@gmail.com"
+            "name": "yandexmoneypayout",
+            "email": "yandexmoneypayout@gmail.com"
         }
     ],
-    "require-dev": {
-        "phpunit/phpunit": "5.3.*"
-    }
+    "autoload": {
+        "psr-4": {
+          "YandexMoney\\": "lib/"
+        }
+    },
 }
