--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
         }
     ],
     "autoload": {
-        "classmap": ["lib/"]
+        "psr-4": {
+            "YandexMoney\\": "lib/"
+        }
     },
 }
